# music-playlist-git

./: .gitignore  README.md  pyproject.toml
docs/: desktop-app.md  product-direction.md
packaging/pyinstaller/: playlistgit.spec
src/playlistgit/: app_credentials.py  cli.py  config.py  desktop.py  matcher.py  models.py  paths.py  store.py  sync.py  toml_writer.py  tui.py  ytmusic_oauth.py
src/playlistgit/adapters/: __init__.py  spotify.py  ytmusic.py
tests/: test_adapters.py  test_config.py  test_matcher.py  test_store.py  test_sync.py
