[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlistgit"
version = "0.1.0"
description = "Git-like sync for music playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "rapidfuzz>=3.9",
  "rich>=13.7",
  "spotipy>=2.24",
  "typer>=0.12",
  "ytmusicapi>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
playlistgit = "playlistgit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

