[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlistgit"
version = "0.1.0"
description = "Git-like sync for music playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "platformdirs>=4.3",
  "rapidfuzz>=3.9",
  "rich>=13.7",
  "spotipy>=2.24",
  "textual>=0.89",
  "typer>=0.12",
  "ytmusicapi>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
desktop = [
  "pyinstaller>=6.11",
  "PySide6>=6.8",
]

[project.scripts]
playlistgit = "playlistgit.cli:app"
playlistgit-desktop = "playlistgit.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
